# FutureContinuation

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
future/: CMakeLists.txt  default_executor.cpp  default_executor.h  execute_options.h  executor.cpp  executor.h  future.h  future.ipp  future_await.h  promise.cpp  promise.h
future/detail/: CMakeLists.txt  callable_traits.h  execution_context.cpp  execution_context.h  execution_context.ipp  execution_context_impl.cpp  execution_context_impl.h  execution_context_impl.ipp
test/: CMakeLists.txt  future_await.cpp  future_cancel.cpp  future_creation.cpp  future_exception.cpp  future_then.cpp  future_utility.cpp  main.cpp  test_executor.cpp  test_executor.h
